<resources>
    <string name="app_name">ENHATRAPE</string>
    <string name="titulo_encuesta">ENCUESTA “HABILIDADES AL TRABAJO EN EL PERÚ”</string>
    <string name="caratula_loc">LOCALIZACIÓN DE LA EMPRESA</string>
    <string name="caratula_loc_ubicacion_geo">A.UBICACIÓN GEOGRÁFICA</string>
    <string name="caratula_loc_ubicacion_geo_departamento">1.Departamento</string>
    <string name="caratula_loc_ubicacion_geo_provincia">2.Provincia</string>
    <string name="caratula_loc_ubicacion_geo_distrito">3.Distrito</string>
    <string name="caratula_loc_identificacion">IDENTIFICADOR UNICO DE LA EMPRESA</string>
    <string name="caratula_loc_cambiodistrito">Cambio de Distrito</string>
    <string name="caratula_loc_coordenadas">B.COORDENADAS DEL PUNTO GPS</string>
    <string name="caratula_loc_coordenadas_gps_latitud">4.GPS LATITUD</string>
    <string name="caratula_loc_coordenadas_gps_altitud">4.GPS ALTITUD</string>
    <string name="caratula_loc_coordenadas_gps_longitud">4.GPS LONGITUD</string>
    <string name="caratula_loc_ubicacion_muestral">C.UBICACIÓN MUESTRAL</string>
    <string name="caratula_loc_ubicacion_muestral_sector">5.Sector de Trabajo</string>
    <string name="caratula_loc_ubicacion_muestral_area">6.Área de Trabajo</string>
    <string name="caratula_loc_ubicacion_muestral_zona">7.Zona</string>
    <string name="caratula_loc_ubicacion_muestral_manzana">8.Manzana</string>
    <string name="caratula_loc_ubicacion_muestral_frente">9.Frente</string>
    <string name="caratula_loc_direccion">10.Dirección </string>
    <string name="caratula_loc_tipo">Tipo Vía </string>
    <string name="caratula_loc_nombrevia">Nombre de la Vía </string>
    <string name="caratula_loc_direccion_nombre">Tipo Vía:</string>
    <string name="caratula_loc_direccion_nombre_avenida">Avenida</string>
    <string name="caratula_loc_direccion_nombre_jiron">Jirón</string>
    <string name="caratula_loc_direccion_nombre_calle">Calle</string>
    <string name="caratula_loc_direccion_nombre_pasaje">Pasaje</string>
    <string name="caratula_loc_direccion_nombre_carretera">Carretera</string>
    <string name="caratula_loc_direccion_nombre_prolongacion">Prolongación</string>
    <string name="caratula_loc_direccion_npuerta">Nº puerta</string>
    <string name="caratula_loc_direccion_block">Block</string>
    <string name="caratula_loc_direccion_interior">Interior</string>
    <string name="caratula_loc_direccion_piso">Piso</string>
    <string name="caratula_loc_direccion_manzana">Manzana</string>
    <string name="caratula_loc_direccion_lote">Lote</string>
    <string name="caratula_loc_direccion_km">Km.</string>
    <string name="caratula_loc_direccion_referencia">11.Referencia de la dirección</string>
    <string name="caratula_datos">DATOS DE LA ENTREVISTA</string>
    <string name="caratula_datos_operador">Operador de empresas</string>
    <string name="caratula_datos_jefe">Jefe de Equipo</string>
    <string name="caratula_datos_supervisor">Supervisor Nacional</string>
    <string name="caratula_datos_dni">DNI</string>
    <string name="caratula_datos_nombres">Nombres y Apellidos</string>
    <string name="caratula_identificacion">IDENTIFICACIÓN DE LA EMPRESA Y CONDUCTOR DE LA EMPRESA</string>
    <string name="caratula_identificacion_ruc">1.Nº de RUC</string>
    <string name="caratula_identificacion_razon_social">2.Razón social o apellidos y nombres del propietario</string>
    <string name="caratula_identificacion_nombre_comercial">3.Nombre comercial de la empresa</string>
    <string name="caratula_identificacion_anio_fundacion">4.Año de fundación </string>
    <string name="caratula_identificacion_pagina_web">5.Página web</string>
    <string name="caratula_identificacion_correo">6.Correo electrónico</string>
    <string name="caratula_identificacion_nopagina_web">No tiene página web</string>
    <string name="mod3_p10">10. para su empresa ¿Qué tan importante es el financiamiento del sector público como fuente de ingresos…</string>
    <string name="mod3_p10_sp1">1.Altamente importante?</string>
    <string name="mod3_p10_sp2">2.Bastante importante?</string>
    <string name="mod3_p10_sp3">3.poco importante?</string>
    <string name="mod3_p10_sp4">4.Escasamente importante?</string>
    <string name="mod3_p10_sp5">5.NO SABE/NO OpINA</string>
    <string name="mod6_p5">5. En términos de lo que su empresa necesita, ¿Diga Ud. cuáles son las habilidades/cualidades que hacen falta al personal que se desempeña en los siguientes grupos ocupaciones</string>
    <string name="mod6_p5_sp1">1.Habilidad de lectura y escritura (en Español)</string>
    <string name="mod6_p5_sp2">2.Habilidades de cálculo y numérica</string>
    <string name="mod6_p5_sp3">3.Conocimiento (hablar, lectura y escritura) de Inglés</string>
    <string name="mod6_p5_sp4">4.Conocimiento (hablar, lectura y escritura) de otro idioma extranjero (ej. Francés, Chino, etc.)</string>
    <string name="mod6_p5_sp5">5.Habilidades técnicas específicas de la ocupación</string>
    <string name="mod6_p5_sp6">6.Habilidad de comunicación</string>
    <string name="mod6_p5_sp7">7.Habilidad de liderazgo</string>
    <string name="mod6_p5_sp8">8.Habilidad de trabajar en equipo</string>
    <string name="mod6_p5_sp9">9.Habilidad de pensamiento creativo y crítico</string>
    <string name="mod6_p5_sp10">10.Habilidad de resolución de problemas (en los que llegar a una buena solución tome al menos 30 minutos de pensar)</string>
    <string name="mod6_p5_sp11">11.Habilidad de trabajar independientemente</string>
    <string name="mod6_p5_sp12">12.Habilidad de manejo de tiempo</string>
    <string name="mod6_p5_sp13">13.Responsabilidad (hacer un trabajo consciente, ser trabajador, hacer el trabajo eficientemente)</string>
    <string name="mod6_p5_sp14">14.Estabilidad emocional (ser sereno y manejar bien la presión, no perder el control fácilmente)</string>
    <string name="mod6_p5_sp15">15.Amabilidad (ser considerado, amable, cortés)</string>
    <string name="mod6_p5_sp16">16.Extraversión (ser comunicador, sociable)</string>
    <string name="mod6_p5_sp17">17.Apertura a la experiencia (ser original, tener una imaginación activa)</string>
    <string name="mod6_p5_sp18">18.Conocimiento de informática \ uso de computadoras</string>
    <string name="mod6_p5_sp19">19.Otro</string>
    <string name="mod6_p5_sp20">20.Ninguna</string>
    <string name="mod7_p7">7. ¿Cuál es la principal estrategia utilizan  para que, en el futuro, los trabajadores tengan las habilidades y competencias requeridas?</string>
    <string name="mod7_p7_sp1">1.Capacitacion al personal actual</string>
    <string name="mod7_p7_sp2">2.Capacitamos a los contratistas con los que trabajan</string>
    <string name="mod7_p7_sp3">3.Contratamos nuevo personal que cuenta con las habilidades, competencias y calificaciones que necesitamos</string>
    <string name="mod7_p7_sp4">4.Contratamos nuevo personal, al cual le damos capacitación específica</string>
    <string name="mod7_p7_sp5">5.Otros</string>
    <string name="mod7_p8">8. ¿Cuáles habilidades / competencias son consideradas generalmente como importantes en su empresa para el desarrollo de su organización en los próximos años?</string>
    <string name="mod7_p8_sp1">1.Habilidad de lectura y escritura (en Español)</string>
    <string name="mod7_p8_sp2">2.Habilidades de cálculo y numérica</string>
    <string name="mod7_p8_sp3">3.Conocimiento (hablar, lectura y escritura) de Inglés</string>
    <string name="mod7_p8_sp4">4.Conocimiento (hablar, lectura y escritura) de otro idioma extranjero (ej. Francés, Chino, etc.)</string>
    <string name="mod7_p8_sp5">5.Habilidades técnicas específicas de la ocupación</string>
    <string name="mod7_p8_sp6">6.Habilidad de comunicación</string>
    <string name="mod7_p8_sp7">7.Habilidad de liderazgo</string>
    <string name="mod7_p8_sp8">8.Habilidad de trabajar en equipo</string>
    <string name="mod7_p8_sp9">9.Habilidad de pensamiento creativo y crítico</string>
    <string name="mod7_p8_sp10">10.Habilidad de resolución de problemas (en los que llegar a una buena solución tome al menos 30 minutos de pensar)</string>
    <string name="mod7_p8_sp11">11.Habilidad de trabajar independientemente</string>
    <string name="mod7_p8_sp12">12.Habilidad de manejo de tiempo</string>
    <string name="mod7_p8_sp13">13.Responsabilidad (hacer un trabajo consciente, ser trabajador, hacer el trabajo eficientemente)</string>
    <string name="mod7_p8_sp14">14.Estabilidad emocional (ser sereno y manejar bien la presión, no perder el control fácilmente)</string>
    <string name="mod7_p8_sp15">15.Amabilidad (ser considerado, amable, cortés)</string>
    <string name="mod7_p8_sp16">16.Extroversión (ser comunicador, sociable)</string>
    <string name="mod7_p8_sp17">17.Apertura a la experiencia (ser original, tener una imaginación activa)</string>
    <string name="mod7_p8_sp18">18.Conocimiento de informática / uso de computadoras</string>
    <string name="mod7_p8_sp19">19.Otra </string>
    <string name="mod7_p8_sp20">20.Ninguna.</string>
    <string name="mod7_p22">22.  ¿Cuáles son las razones para que no haya organizado ni financiado capacitación para ninguno de los trabajadores de su empresa en los últimos 12 meses?</string>
    <string name="mod7_p22_sp1">1.No hay capacitación disponible en el área de conocimiento requerido.</string>
    <string name="mod7_p22_sp2">2.Los cursos que interesan no están disponibles en la zona.</string>
    <string name="mod7_p22_sp3">3.La calidad de los cursos o proveedores locales no es satisfactoria.</string>
    <string name="mod7_p22_sp4">4.Es difícil obtener información sobre los cursos disponibles en la zona.</string>
    <string name="mod7_p22_sp5">5.No sé qué cursos hay disponibles en la zona.</string>
    <string name="mod7_p22_sp6">6.Las fechas de inicio o los horarios de los cursos no son convenientes.</string>
    <string name="mod7_p22_sp7">7.No hay dinero disponible para capacitación.</string>
    <string name="mod7_p22_sp8">8.Los cursos externos son demasiado costosos.</string>
    <string name="mod7_p22_sp9">9.Los gerentes no tienen tiempo para organizar capacitaciones.</string>
    <string name="mod7_p22_sp10">10.Los trabajadores están demasiado ocupados como para impartir capacitación.</string>
    <string name="mod7_p22_sp11">11.Los  trabajadores están demasiado ocupados como para capacitarse.</string>
    <string name="mod7_p22_sp12">12.La capacitación no se considera una prioridad de la empresa.</string>
    <string name="mod7_p22_sp13">13.Todo nuestro personal es plenamente competente / no se necesita capacitación.</string>
    <string name="mod7_p22_sp14">14.El personal capacitado será arrebatado por otros empleadores.</string>
    <string name="mod7_p22_sp15">15.Muchos  trabajadores  son temporales y puede que no permanezcan en nuestra empresa.</string>
    <string name="mod7_p22_sp16">16.Otra</string>
    <string name="mod7_p22_sp17">17.No hay ninguna razón en particular.</string>
    <string name="mod7_p39">39. ¿Cuál es la razón principal para que esta empresa no utilice becas, préstamos, incentivos tributarios o cualquier otro apoyo del gobierno para financiar capacitaciones?</string>
    <string name="mod7_p39_sp1">1.No sabíamos que existían fondos del gobierno</string>
    <string name="mod7_p39_sp2">2.Sabíamos que habían fondos, pero no sabíamos cómo acceder a ellos</string>
    <string name="mod7_p39_sp3">3.Porque la empresa no cumple con los requisitos de elegibilidad para acceder a estos fondos</string>
    <string name="mod7_p39_sp4">4.Acceder a los fondos es agobiante</string>
    <string name="mod7_p39_sp5">5.Porque los fondos de financiamiento son pequeños</string>
    <string name="mod7_p39_sp6">6.Porque los montos que ofrecen son pequeños en relación al costo de la capacitación</string>
    <string name="mod7_p39_sp7">7.Otros</string>
    <string name="especifique">Especifique</string>
</resources>