<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:padding="@dimen/margin15dp"
    android:background="@drawable/borde_layout_preguntas"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod7_p8"
        android:layout_marginBottom="@dimen/fab_margin"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp1"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp2"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp3"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp4"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp5"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp6"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp7"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp8"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp9"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp10"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp11"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp12"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp13"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp14"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp15"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp16"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp17"
            android:layout_margin="@dimen/margin5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp18"
            android:layout_margin="@dimen/margin5dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/margin5dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod7_p8_sp19"
                android:layout_marginRight="@dimen/margin15dp"
                />
            <EditText
                android:paddingLeft="@dimen/margin5dp"
                android:hint="@string/especifique"
                android:background="@drawable/cajas_de_texto"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p8_sp20"
            android:layout_margin="@dimen/margin5dp"/>

    </LinearLayout>
</LinearLayout>