<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:padding="@dimen/margin15dp"
    android:background="@drawable/borde_layout_preguntas"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod7_p39"
        android:layout_marginBottom="@dimen/fab_margin"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp3"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp4"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp5"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp6"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod7_p39_sp7"/>
    </RadioGroup>
    <EditText
        android:id="@+id/p39_edtEspecifique"
        android:inputType="textCapCharacters"
        android:hint="@string/especifique"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingLeft="@dimen/margin5dp"
        android:background="@drawable/cajas_de_texto"
        android:layout_marginLeft="@dimen/margin15dp"/>

</LinearLayout>